cambios en el modal

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -15,4 +15,9 @@
 .imgmodal{
     width: 100%;
     height: auto;
+   border-radius: 100px;
+}
+.plotpelicula{
+    font-family: fantasy;
+    font-weight: 200;
 }
